--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -2,10 +2,8 @@ name: Lint Code Base
 
 on:
   push:
-    branches:
+    branches-ignore:
       - main
-        # branches-ignore:
-        #   - main
   pull_request:
     branches:
       - main
