--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^5.0.0-beta2",
+    "bootstrap": "^4.6.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-relay": "^10.1.0",
