--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.3.0",
     "react-icons": "^3.11.0",
     "react-relay": "^10.1.0",
     "react-router-dom": "^5.2.0",
@@ -22,9 +23,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "relay": "relay-compiler --src ./src --schema ./schema.graphql"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
